fix result gap

--- a/src/pages/result/description/index.less
+++ b/src/pages/result/description/index.less
@@ -1,6 +1,6 @@
 .ResultDescription {
 	position: relative;
-	padding-bottom: 8rem;
+	padding-bottom: 9.2rem;
 	width: 100%;
 
 	& > .dialog {
